[package]
name = "aliu"
version = "0.1.21"
edition = "2021"
description = "Albert Liu's utilities"
homepage = "https://github.com/A1Liu/rust-utils"
repository = "https://github.com/A1Liu/rust-utils"
license = "MIT"

[lib]
name = "aliu"
path = "src/lib.rs"

[dependencies]

[target."cfg(unix)".dependencies]
libc = "=0.2.107"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "memoryapi", "winnt"] }
